Fix event listener on Share button

--- a/src/popup.html
+++ b/src/popup.html
@@ -7,7 +7,7 @@
 
     <body>
         <div>
-            <button onclick="shareSong()">
+            <button id="share-song">
         </div>
     </body>
 </html>
