Add some pizzazz

--- a/src/popup.html
+++ b/src/popup.html
@@ -3,6 +3,7 @@
         <title>BeatCast</title>
 
         <script type="text/javascript" src="popup.js"></script>
+        <link rel="stylesheet" type="text/css" href="popup.css">
     </head>
 
     <body>
